# pyxxdi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
src/pyxxdi/: __init__.py
src/pyxxdi/affiliations/: __init__.py  clean.py
src/pyxxdi/analytics/: __init__.py  authors.py  compare.py  compare_institutions.py  dashboard.py  export.py  institutions.py  network.py  temporal.py
src/pyxxdi/classify/: __init__.py  subjects.py
src/pyxxdi/cleaning/: __init__.py  affiliations.py  deduplicate.py  keywords.py  publications.py
src/pyxxdi/io/: __init__.py  csv.py  excel.py  openalex.py  scopus.py  wos.py
src/pyxxdi/keywords/: __init__.py  clean.py  normalize.py
src/pyxxdi/metrics/: __init__.py  advanced.py  core.py  engines.py  g_index.py  h_index.py  helpers.py  profile.py  validators.py  x_index.py  xd_index.py  xd_variants.py
src/pyxxdi/parsing/: __init__.py  scopus.py
src/pyxxdi/schemas/: __init__.py  columns.py  converters.py  validators.py
src/pyxxdi/utils/: __init__.py  schema.py  validation.py
tests/: test_advanced_metrics.py  test_affiliations.py  test_all_round_metrics.py  test_authors.py  test_classify.py  test_cleaning.py  test_compare.py  test_compare_institutions.py  test_core_metrics.py  test_dashboard.py  test_export.py  test_filters.py  test_institutions.py  test_io.py  test_keywords.py  test_keywords_normalize.py  test_metric_engine.py  test_metric_errors.py  test_network.py  test_parsers.py  test_phase3_integration.py  test_phase4_refactor.py  test_profile.py  test_public_api.py  test_schema.py  test_smoke.py  test_temporal.py  test_validation.py  test_x_index.py  test_xd_index.py  test_xd_variants.py
