[project]
name = "pyxxdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhirup Nandy", email = "abhirupnandy.rocks@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
pyxxdi = "pyxxdi:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
