[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pyxxdi"
version = "0.3.0"
description = "Modern bibliometric analytics package for x-index, xd-index, ranking, benchmarking, and research evaluation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Abhirup Nandy" },
  { name = "Nilabhra Rohan Das" }
]
maintainers = [
  { name = "Abhirup Nandy" }
]
keywords = [
  "bibliometrics",
  "scientometrics",
  "x-index",
  "xd-index",
  "research-evaluation",
  "analytics"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
Documentation = "https://github.com/abhirupnandy/pyxxdi"

dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8.0",
  "plotly>=5.0.0"
]

network = [
  "networkx>=3.0"
]

dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0"
]

[project.urls]
Homepage = "https://github.com/abhirupnandy/pyxxdi"
Repository = "https://github.com/abhirupnandy/pyxxdi"
Issues = "https://github.com/abhirupnandy/pyxxdi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxxdi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B"
]

ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"

[tool.coverage.run]
source = ["src/pyxxdi"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
